@@ -11,6 +11,7 @@ Version 1.5.11+svn:
     * Now clear fog/shroud before an attack when doing a move+attack action.
     * Changed the widgets in the in game message dialog.
     * The multiplayer dialog shows tooltips again.
+    * The textbox history now uses CTRL+TAB and CTRL+SHIFT+TAB.
 
 Version 1.5.11:
   * Graphics
